--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,26 @@
         </plugins>
     </build>
 
-    <!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
+
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
             <version>4.8-1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.19</version>
+        </dependency>
+
     </dependencies>
+
+
+
 
 
 
